; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/macintosh/extr_windfarm_smu_controls.c_smu_fan_get.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/macintosh/extr_windfarm_smu_controls.c_smu_fan_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wf_control = type { i32 }
%struct.smu_fan_control = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.wf_control*, i32*)* @smu_fan_get to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @smu_fan_get(%struct.wf_control* %0, i32* %1) #0 {
  %3 = alloca %struct.wf_control*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.smu_fan_control*, align 8
  store %struct.wf_control* %0, %struct.wf_control** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load %struct.wf_control*, %struct.wf_control** %3, align 8
  %7 = call %struct.smu_fan_control* @to_smu_fan(%struct.wf_control* %6)
  store %struct.smu_fan_control* %7, %struct.smu_fan_control** %5, align 8
  %8 = load %struct.smu_fan_control*, %struct.smu_fan_control** %5, align 8
  %9 = getelementptr inbounds %struct.smu_fan_control, %struct.smu_fan_control* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32*, i32** %4, align 8
  store i32 %10, i32* %11, align 4
  ret i32 0
}

declare dso_local %struct.smu_fan_control* @to_smu_fan(%struct.wf_control*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
